feat: changed color and separate section into components

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,13 +4,14 @@
 //     background-color: rgb(255, 255, 0);
 // }
 /* Custom CSS */
-.bg-yellow {
-    background-color: rgb(255, 255, 0);
+.bg-blue {
+    background-color: rgb(91, 134, 252);
     transition: background-color 0.3s ease;
+    color: white;
 }
 
-.bg-light-yellow {
-    background-color: #fae62d;
+.bg-light-blue {
+    background-color: #5064fa;
 }
 
 /* Ensure the navbar stays on top */
@@ -31,12 +32,13 @@
 .navbar-brand {
     font-size: 1.5rem;
     font-weight: bold;
+    color: white;
 }
 
 section,
 .section {
-    color: black;
-    // background-color: blue;
+    color: var(--default-color);
+    background-color: var(--background-color);
     padding: 30px 0;
     scroll-margin-top: 88px;
     overflow: clip;
@@ -76,11 +78,7 @@ section,
     --background-color: #ffffff; /* Background color for the entire website, including individual sections */
     --default-color: #444444; /* Default color used for the majority of the text content across the entire website */
     --heading-color: #37517e; /* Color for headings, subheadings and title throughout the website */
-    --accent-color: rgb(
-        255,
-        255,
-        0
-    ); /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+    --accent-color: #47b2e4; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
     --contrast-color: #ffffff; /* The contrast color is used for elements when the background color is one of the heading, accent, or default colors. Its purpose is to ensure proper contrast and readability when placed over these more dominant colors */
 }
 
@@ -770,7 +768,7 @@ h6 {
     right: 15px;
     bottom: -15px;
     z-index: 99999;
-    background-color: rgb(255, 255, 0);
+    background-color: rgb(98, 121, 255);
     width: 44px;
     height: 44px;
     border-radius: 50px;
@@ -779,12 +777,11 @@ h6 {
 
 .media.active {
     bottom: 70px;
-    background-color: rgb(255, 255, 0);
 }
 
 .media {
     bottom: 30px;
-    background-color: white;
+    background-color: rgb(0, 255, 76);
     position: fixed;
     opacity: 1;
     visibility: visible;
@@ -797,7 +794,7 @@ h6 {
 .scroll-top i,
 .media i {
     font-size: 24px;
-    color: black;
+    color: white;
     line-height: 0;
 }
 
@@ -914,8 +911,8 @@ h6 {
   # Hero Section
   --------------------------------------------------------------*/
 .hero {
-    // --background-color: var(--hero-background-color);
-    background-color: rgb(254, 254, 80);
+    --background-color: var(--hero-background-color);
+    // background-color: rgb(254, 254, 80);
     --default-color: var(--hero-color);
     --heading-color: var(--hero-color);
     --contrast-color: var(--hero-color);
@@ -932,12 +929,11 @@ h6 {
     font-size: 48px;
     font-weight: 700;
     line-height: 56px;
-    color: black;
 }
 
 .hero p {
-    color: black;
-    // color: color-mix(in srgb, var(--default-color), transparent 30%);
+    // color: black;
+    color: color-mix(in srgb, var(--default-color), transparent 30%);
     margin: 5px 0 30px 0;
     font-size: 22px;
     line-height: 1.3;
@@ -945,8 +941,8 @@ h6 {
 }
 
 .hero .btn-get-started {
-    color: black;
-    // color: var(--contrast-color);
+    // color: black;
+    color: var(--contrast-color);
     background: var(--accent-color);
     font-family: var(--heading-font);
     font-weight: 500;
