--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -54,6 +54,12 @@ section,
         scroll-margin-top: 66px;
     }
 }
+// For card products
+.card-img-top {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
 
 /**
 * Template Name: Arsha
